--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -1,4 +1,4 @@
-s#
+#
 # Password Management Servlets (PWM)
 # http://code.google.com/p/pwm/
 #
@@ -24,7 +24,7 @@ CATEGORY_DESCR_GENERAL=
 
 LABEL_pwm.applicationTitle=Application Title
 DEFLT_pwm.applicationTitle=Password Self Service
-DESCR_pwm.applicationTitle=Name of the application, shows up on the top of all pages.
+DESCR_pwm.applicationTitle=Name of the application, displayed in the header on each page.
 
 LABEL_pwm.forwardURL=Forward URL
 DEFLT_pwm.forwardURL=/pwm
@@ -169,21 +169,7 @@ DESCR_ldap.proxy.username=LDAP Proxy User used by PWM to access the ldap directo
  <p/>\
  Generally, the proxy user needs read/browse object rights to all user objects \
  it will manage, as well as create object rights in the new user container (if \
- enabled).\
- <p>\
- the following attribute rights are required:\
- <p>\
- <ul><li>compare/read attribute rights to all attributes</li>\
- <li>Write attribute rights to the following:</li>\
- <ul><li>Object Class                  (objectClass)</li>\
- <li>Password Management           (passwordManagement)</li>\
- <li>pwm* attributes that are part of the pwmUser class (see pwmSchema.ldif)</li>\
- <li>Locked By Intruder            (lockedByIntruder)</li>\
- <li>Login Intruder Attempts       (loginIntruderAttempts)</li>\
- <li>Login Intruder Reset Time     (loginIntruderResetTime)</li>\
- <li>Login Grace Remaining         (loginGraceRemaingTime)</li>\
- <li>Other attributes configured in the PwmConfiguration</li></ul></ul>
-
+ enabled).
 LABEL_ldap.proxy.password=LDAP Proxy Password
 DEFLT_ldap.proxy.password=
 DESCR_ldap.proxy.password=The corresponding password of LDAP Proxy User user.
@@ -358,8 +344,8 @@ REGEX_email.smtp.advancedSettings=^[a-zA-Z0-9.]+=.+$
 #*******************************************************************************************#
 #                                 Global Password Policy                                    #
 #*******************************************************************************************#
-CATEGORY_LABEL_PASSWORD_POLICY=Global Password Policy
-CATEGORY_DESCR_PASSWORD_POLICY=The global password policy is applied to all PWM users, regardless \
+CATEGORY_LABEL_PASSWORD_POLICY=Password Policy
+CATEGORY_DESCR_PASSWORD_POLICY=This password policy is applied to all PWM users, regardless \
   of any other password policy that may be configured in the directory.  If so configured, PWM reads \
   the password policy configured for the user in the directory and <b>merges</b> the policy with \
   the global policy configured here.  When policies are merged, the <b>most restrictive</b> setting \
@@ -591,8 +577,7 @@ DESCR_intruder.address.resetTime=This setting defines the time period after whic
  a reverse proxy that doesn't set the X-Forwarded-For header, or behind some types \
  of NAT firewalls.\
  <p/>\
- Value is in number of seconds.  A value of zero disables the address lockout table.\
-
+ Value is in number of seconds.  A value of zero disables the address lockout table.
 LABEL_intruder.address.maxAttempts=Address Maximum Attempts
 DEFLT_intruder.address.maxAttempts=30
 DESCR_intruder.address.maxAttempts=The maximum number of attempts any user may make within a particular address.  Once \
@@ -656,21 +641,21 @@ DESCR_events.ldap.maxEvents=Maximum number of events to hold in the event log fo
 #                                  Password Recovery                                        #
 #*******************************************************************************************#
 CATEGORY_LABEL_RECOVERY=Forgotten Password
-CATEGORY_DESCR_RECOVERY=Policies for user's forgotten password configuration.  Note that if a \
+CATEGORY_DESCR_RECOVERY=Policies for user's forgotten password configuration.  If a \
   configuration policy is read from the directory, that policy will override the settings \
   listed here.
 
 LABEL_challenge.allowSetup.queryMatch=Password Recovery Query String
 DEFLT_challenge.allowSetup.queryMatch=(objectClass=*)
-DESCR_challenge.allowSetup.queryMatch=Query string used to detect if a user is a permitted to configre challenges.  The user \
+DESCR_challenge.allowSetup.queryMatch=Query string used to detect if a user is a permitted to configure challenges.  The user \
  must be returned during this ldap query or else the user will not be permitted to \
  configure challenges.\
 
 LABEL_challenge.forceSetup=Force Response Setup
 DEFLT_challenge.forceSetup=true
-DESCR_challenge.forceSetup=If true, the user will be directed to configure challenge/response before loging out of PWM. \
+DESCR_challenge.forceSetup=If true, the user will be directed to configure challenge/response before logging out of PWM. \
  This accounts for new user creation and activation, and other scenarios.  The user is \
- forced check to see if eligable for allowSetup, and also if they do not have valid \
+ forced check to see if eligible for allowSetup, and also if they do not have valid \
  responses already configured.\
 
 LABEL_challenge.userAttribute=Response Storage Attribute
@@ -776,17 +761,18 @@ DESCR_command.checkResponses.queryMatch=if the command servlet is called with th
  user's password responses is checked.  If the user does not match this query, then the \
  user's responses will not be checked, and the user will be redirected to the forward URL. \
 
-LABEL_challenge.token.enable=Enable Token
+LABEL_challenge.token.enable=Enable Email Token
 DEFLT_challenge.token.enable=false
-DESCR_challenge.token.enable=Enable token
+DESCR_challenge.token.enable=If enabled, a token will be emailed to the user during the forgotten password process.  The user \
+  will be required to type the email token in order to proceed to recover their password.
 
 LABEL_challenge.token.characters=Token Characters
 DEFLT_challenge.token.characters=abcdefghijklmnpqrstuvwxyz23456789
-DESCR_challenge.token.characters=Available characters
+DESCR_challenge.token.characters=Available characters for the email token.
 
 LABEL_challenge.token.length=Token Length
 DEFLT_challenge.token.length=6
-DESCR_challenge.token.length=Length of the token
+DESCR_challenge.token.length=Length of the email token
 
 #*******************************************************************************************#
 #                               New User Registration                                       #
