--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -48,6 +48,7 @@ Button_Verify=Verify
 Button_UnlockPassword=Unlock Password
 Button_ConfirmResponses=Confirm Responses
 Button_ChangeResponses=Go Back
+Button_CheckCode=CheckCode
 
 Title_Login=Please Log In
 Title_ChangePassword=Change Password
@@ -91,7 +92,7 @@ Display_RecoverRandomResponses=You must answer the following questions to contin
 Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or by changing your password.
 Display_RecoverChoiceUnlock=Unlock your account.  If you remember your password, you can unlock your account by selecting this option.  Your password will not be changed.
 Display_RecoverChoiceReset=Set a new password.  If you have forgotten your password and would like to set a new one, click here.  Your account will also be unlocked when you set a new password.
-Display_NewUser=Complete this form to create a new user account. After completing this form, you can set a new password, and your account setup will be complete. <p/> Be sure to complete the process, or your new account may not be usable.
+Display_RecoverEnterCode=To verify your identity, a security code has been sent to you.  Please enter the security code here.
 Display_ActivateUser=To confirm your identity, please enter the following information. Your information will be used to locate and activate your user account.<p/>Be sure to complete the process, or your account will not be activated properly.
 Display_PleaseWaitBody=Your password is being changed. This process may take several minutes, please be patient.
 Display_ErrorBody=An error has occurred. Please close your browser and try again later.  If this error occurs repeatedly, please contact your help desk.
