--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -114,23 +114,6 @@ DESCR_pwm.seedlist.location=PWM can generate "friendly" random password suggesti
  <p/>\
  Setting this to blank will result in suggested passwords being completely randomized.\
 
-LABEL_password.sharedHistory.age=Shared History Age
-DEFLT_password.sharedHistory.age=2419200
-DESCR_password.sharedHistory.age=After a user password change, PWM will store a user's old password in the shared history \
- list.  The shared history list will then be used during new password creations, and users \
- will not be permitted to use a password stored there.  Passwords are stored as salted \
- hashes in the pwmDB.\
- <p/>\
- This has the effect of producing a common, shared password history for all PWM users.  Old \
- passwords are added to the history at the time of password change.\
- <p/>\
- Passwords are stored as a salted hash. \
- <p/>\
- Setting this to zero will disable the shared history. \
- <p/>\
- PWM will periodically remove values older than the configured value here.  Value is \
- specified in seconds.  Default is 4 weeks (60s * 60m * 24h * 7d * 4w = 2419200)\
-
 LABEL_google.analytics.tracker=Google Analytics Code
 DEFLT_google.analytics.tracker=
 DESCR_google.analytics.tracker=Google tracking cookie code.  Used for Google Analytics.  See <a href="http://www.google.com/analytics/">\
@@ -480,6 +463,16 @@ DESCR_password.policy.disallowedAttributes=A list of attributes not allowed to b
   values will be read and will not be permitted to be used as part of the password value.  This check is case insensitive.
 REGEX_password.policy.disallowedAttributes=^[a-zA-Z][a-zA-Z0-9]+$
 
+LABEL_password.sharedHistory.enable=Enable Shared History
+DEFLT_password.sharedHistory.enable=true
+DESCR_password.sharedHistory.enable=Enable a global shared password history for all PWM users.  If enabled, all pwm users \
+  will share a common password history.  This helps prevent common organizational words from being used as passwords by users. \
+  Passwords are stored as a salted encrypted hash in the pwmDB.
+
+LABEL_password.sharedHistory.age=Shared History Age
+DEFLT_password.sharedHistory.age=2419200
+DESCR_password.sharedHistory.age= PWM will periodically remove values older than the configured value here.  Value is \
+ specified in seconds.  Default is 4 weeks (60s * 60m * 24h * 7d * 4w = 2419200)\
 
 #*******************************************************************************************#
 #                               eDirectory Settings                                         #
@@ -594,7 +587,11 @@ DESCR_intruder.session.maxAttempts=The maximum number of attempts any user may m
 #                                  Event Logging                                            #
 #*******************************************************************************************#
 CATEGORY_LABEL_LOGGING=Event Logging
-CATEGORY_DESCR_LOGGING=Event Logging
+CATEGORY_DESCR_LOGGING=Event Logging for PWM activities.   Log events stored in the pwmDB can\
+  be viewed using the administration module.  Standard file logging can be configured by \
+  editing the <i>log4jconfig.xml</i> file in PWM's <i>WEB-INF</i> directory.  PWM's use of the \
+  apache <a href="http://logging.apache.org/log4j/">log4j</a> library allows directing log events to file, \
+  database, syslog, Windows event log and other systems.
 
 LABEL_events.pwmDB.maxEvents=Maximum pwmDB Events
 DEFLT_events.pwmDB.maxEvents=1000000
@@ -767,7 +764,7 @@ DESCR_challenge.token.enable=If enabled, a token will be emailed to the user dur
   will be required to type the email token in order to proceed to recover their password.
 
 LABEL_challenge.token.characters=Token Characters
-DEFLT_challenge.token.characters=abcdefghijklmnpqrstuvwxyz23456789
+DEFLT_challenge.token.characters=ABCDEFGHJKLMNPQRSTUVWXY3456789
 DESCR_challenge.token.characters=Available characters for the email token.
 
 LABEL_challenge.token.length=Token Length
@@ -829,37 +826,19 @@ REGEX_newUser.form=^[a-zA-Z0-9]+:.+:(text|number|email|password):[0-9]+:[0-9]+:(
 #                                User Activation                                            #
 #*******************************************************************************************#
 CATEGORY_LABEL_ACTIVATION=User Activation
-CATEGORY_DESCR_ACTIVATION=Activate a new user and allow the user to configure an initial password
+CATEGORY_DESCR_ACTIVATION=The user activation module allows users to activate an account \
+  they have not previously authenticated to.  The user does not need to know the password \
+  to activate the account.
 
 LABEL_activateUser.enable=Enable User Activation
 DEFLT_activateUser.enable=false
-DESCR_activateUser.enable=If true, this module will be enabled
-
-LABEL_activateUser.queryMatch=Activation Query Match
-DEFLT_activateUser.queryMatch=(&(loginDisabled=true)(!(vehicleInformation=pwmActivated)))
-DESCR_activateUser.queryMatch=Only allow users who match this query to be activated.  Generally, you will \
- only allow users who's accounts are disabled and have not been previously activated \
- to be activated.  The default example uses the "vehicleInformation" attribute on \
- the user object because it is a rarely used attribute available in the default \
- schema, but any attribute can be used for this.\
-
-LABEL_activateUser.searchFilter=Activation Search Filter
-DEFLT_activateUser.searchFilter=(&(objectClass=person)(cn=%cn%))
-DESCR_activateUser.searchFilter=Search filter used to find user during user activation.  If present in the search filter, \
- strings encoded with a percent sign (%) will be replaced with values accrding to the \
- configured form fields.\
-
-LABEL_activateUser.writeAttributes=Activation Write Attributes
-DEFLT_activateUser.writeAttributes=vehicleInformation=pwmActivated;;;loginDisabled=false
-DESCR_activateUser.writeAttributes=Writes attributes to ldap after a user is activated.  Typically this is \
- used to activate the account, as well as put some searchable indicator \
- <p/>\
- format is name=value pair, multiple attributes can be specified by separating with a comma.
-REGEX_activateUser.writeAttributes=^[a-zA-Z][a-zA-Z0-9]*=.+$
+DESCR_activateUser.enable=Enable the new user eactivation module.
 
 LABEL_activateUser.form=Activate User Form
 DEFLT_activateUser.form=cn:Username:text:2:10:true:false;;;sn:Last Name:text:2:32:true:false
-DESCR_activateUser.form=Form fields for activate user module.\
+DESCR_activateUser.form=Form fields for activate user module.  Each attribute will be \
+ required to be entered by the user.  Ideally, the user will be required to enter some \
+ bit of personal data that is not publicly known.\
   <p/>\
  Format: <b>attributeName:label:type:minimumLength:maximumLength:required:confirm</b>\
  <table style="width: 400px">\
@@ -872,6 +851,36 @@ DESCR_activateUser.form=Form fields for activate user module.\
  <tr><td>confirm</td><td>Field must be confirmed (with a duplicate field)</td></tr>\
  </table>
 REGEX_activateUser.form=^[a-zA-Z0-9]+:.+:(text|number|email|password):[0-9]+:[0-9]+:(true|false):(true|false)$
+
+LABEL_activateUser.searchFilter=Activation Search Filter
+DEFLT_activateUser.searchFilter=(&(objectClass=person)(cn=%cn%)
+DESCR_activateUser.searchFilter=Search filter used to find user during user activation.  Each attribute\
+  configured in the Activate User Form should be included in the search filter.  \
+  Strings encoded with a percent sign (%) will be replaced with values supplied by \
+  the user.\
+  <br/><br/>\
+  For example, if the Activate User Form included the attributes "cn" and "surname", then the \
+  filter <b>(&(objectClass=person)(cn=%cn%)(surname=%surname%))</b> may be appropriate.\
+  <br/><br/>\
+  Any attributes that are listed in the form but are not used in the search filter will \
+  tested by attempting an ldap compare with the user supplied value.
+
+LABEL_activateUser.queryMatch=Activation Query Match
+DEFLT_activateUser.queryMatch=(&(loginDisabled=true)(!(vehicleInformation=pwmActivated)))
+DESCR_activateUser.queryMatch=Only allow users who match this query to be activated.  Generally, you will \
+ only allow users who's accounts are disabled and have not been previously activated \
+ to be activated.  The default example uses the "vehicleInformation" attribute on \
+ the user object because it is a rarely used attribute available in the default \
+ schema, but any attribute can be used for this.\
+
+LABEL_activateUser.writeAttributes=Activation Write Attributes
+DEFLT_activateUser.writeAttributes=vehicleInformation=pwmActivated;;;loginDisabled=false
+DESCR_activateUser.writeAttributes=Writes attributes to ldap after a user is activated.  Typically this is \
+ used to activate the account, as well as put some searchable indicator \
+ <p/>\
+ format is name=value pair, multiple attributes can be specified by separating with a comma.
+REGEX_activateUser.writeAttributes=^[a-zA-Z][a-zA-Z0-9]*=.+$
+
 
 
 
@@ -1003,17 +1012,17 @@ CATEGORY_LABEL_ADVANCED=Advanced
 CATEGORY_DESCR_ADVANCED=Advanced settings.  Use caution when changing these settings.
 
 
-LABEL_externalPasswordMethods=External Password Methods
-DEFLT_externalPasswordMethods=
-DESCR_externalPasswordMethods=A comma separated list of Java methods to call after a successful password change.  These \
- methods may take such actions as updating passwords in other systems or updating \
- eDirectory.  The full package name must be included.\
+LABEL_externalPasswordClasses=External Password Classes
+DEFLT_externalPasswordClasses=
+DESCR_externalPasswordClasses=Java classes to call after a successful password change.  These \
+ classes may take such actions as updating passwords in other systems or updating \
+ eDirectory.  External password classes must implement the interface <i>password.pwm.ExternalPasswordMethod</i>\
  <p/>\
  Unless your adding custom Java code to PWM, you should leave this blank.
 
 LABEL_disallowedInputs=Disallowed HTTP Inputs
 DEFLT_disallowedInputs=(?i)<.*script.*>;;;(?i)<.*xml.*>*;;;(?i)\\(.*=*\\)*;;;(?i)<.*img.*>;;;(?i)<.*src.*>
-DESCR_disallowedInputs=Disallowed values.  If any input values (on any http paraemter) matches these patterns, the \
+DESCR_disallowedInputs=Disallowed values.  If any input values (on any http parameter) matches these patterns, the \
   matching portion will be stripped from the input.
 
 LABEL_ldapChaiSettings=LDAP Chai Settings
@@ -1030,8 +1039,9 @@ DESCR_useXForwardedForHeader=If present, use the X-Forwarded-For HTTP header val
  and may be the only reliable way to identify the user's source IP address.
 
 LABEL_allowUrlSessions=Allow URL Sessions
-DEFLT_allowUrlSessions=true
-DESCR_allowUrlSessions=If true, allow sessions to be managed via parameter on URL when cookies are not enabled.
+DEFLT_allowUrlSessions=false
+DESCR_allowUrlSessions=If true, allow sessions to be managed via parameter on URL when cookies are not enabled.  This \
+ allows browsers (such as some mobile devices) that do not support cookies. 
 
 LABEL_forceBasicAuth=Force Basic Authentication
 DEFLT_forceBasicAuth=false
@@ -1047,11 +1057,11 @@ DESCR_pwmDb.location=Location of the pwmDB directory. If the specified path is r
 
 LABEL_pwmDb.implementation=PwmDB implementation used by the pwmDB.
 DEFLT_pwmDb.implementation=password.pwm.util.db.Berkeley_PwmDb
-DESCR_pwmDb.implementation=Java class implemetation used by PwmDB.  Default is the embedded BerkeleyDB Java Edition.
+DESCR_pwmDb.implementation=Java class implementation used by PwmDB.  Default is the embedded BerkeleyDB Java Edition.
 
-LABEL_pwmDb.initString=PwmDB Initialization String
-DEFLT_pwmDb.initString=je.maxMemory=10000000;;;je.cleaner.minUtilization=80
-DESCR_pwmDb.initString=Value passed to the pwmDbImplementation class during initialization.  Value format is specific to the implementation.
+LABEL_pwmDb.initParameters=PwmDB Initialization String
+DEFLT_pwmDb.initParameters=je.maxMemory=10000000;;;je.cleaner.minUtilization=80
+DESCR_pwmDb.initParameters=Value passed to the pwmDbImplementation class during initialization.  Value format is specific to the implementation.
 
 LABEL_pwmInstanceName=PWM Instance Name
 DEFLT_pwmInstanceName=
