--- a/pwm/servlet/src/password/pwm/util/stats/Statistic.properties
+++ b/pwm/servlet/src/password/pwm/util/stats/Statistic.properties
@@ -28,8 +28,8 @@ Authentications_ExpiredWarning=Authentications with Expired Warning
 PWM_Startups=PWM Startups
 PWM_UnknownErrors=PWM Unknown/Unhandled Errors
 PasswordChanges=Password Changes
-RecoverySuccesses=Recovery Successes
-RecoveryFailures=Recovery Failures
+RecoverySuccesses=Forgotten Password Successes
+RecoveryFailures=Forgotten Password Failures
 EmailSendSuccesses=Email Send Successes
 EmailSendFailures=Email Send Failures
 PasswordRuleChecks=Password Rule Checks
@@ -50,3 +50,5 @@ PwmDB_Writes=PwmDB Writes
 GeneratedPasswords=Generated Random Passwords 
 AvgPasswordSyncTime=Average Password Sync Time
 AvgWordlistCheckTime=Average Wordlist Check Time
+RecoveryTokensSent=Forgotten Tokens Sent
+RecoveryTokensPassed=Forgotten Tokens Passed
