--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -49,6 +49,8 @@ Button_UnlockPassword=Unlock Password
 Button_ConfirmResponses=Confirm Responses
 Button_ChangeResponses=Go Back
 Button_CheckCode=CheckCode
+Button_Logout=Logout
+Button_Agree=I Agree
 
 Title_Login=Please Log In
 Title_ChangePassword=Change Password
