--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,8 +1,8 @@
 #Build Number for ANT. Do not edit!
-#Mon Jun 07 19:41:10 EDT 2010
-build.time=2010.06.07 19\:41\:10 EDT
-build.number=946
+#Sun Jun 27 17:39:30 EDT 2010
+build.time=2010.06.27 17\:39\:30 EDT
+build.number=955
 build.user=J
-pwm.version=1.4.4 (developer build)
+pwm.version=1.5.0
 build.java.vendor=Sun Microsystems Inc.
 build.java.version=1.6.0_19
