--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -164,9 +164,15 @@ DESCR_ldap.proxy.username=LDAP Proxy User used by PWM to access the ldap directo
  Generally, the proxy user needs read/browse object rights to all user objects \
  it will manage, as well as create object rights in the new user container (if \
  enabled).
+
 LABEL_ldap.proxy.password=LDAP Proxy Password
 DEFLT_ldap.proxy.password=password
 DESCR_ldap.proxy.password=The corresponding password of LDAP Proxy User user.
+
+LABEL_ldap.proxy.idleTimeout=LDAP Proxy Idle Timeout
+DEFLT_ldap.proxy.idleTimeout=0
+DESCR_ldap.proxy.idleTimeout=Amount of seconds the LDAP Proxy account connection can remain idle before closing. \
+  If zero, then the LDAP Proxy account connection will always remain connected.
 
 LABEL_ldap.promiscuousSSL=LDAP Promiscuous SSL
 DEFLT_ldap.promiscuousSSL=false
