--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -3,6 +3,6 @@
 build.time=2010.06.27 17\:39\:30 EDT
 build.number=955
 build.user=J
-pwm.version=1.5.0
+pwm.version=1.4.4 beta
 build.java.vendor=Sun Microsystems Inc.
 build.java.version=1.6.0_19
