--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,8 +1,8 @@
 #Build Number for ANT. Do not edit!
-#Sun Jun 27 17:39:30 EDT 2010
-build.time=2010.06.27 17\:39\:30 EDT
-build.number=955
+#Tue Jul 06 14:03:36 EDT 2010
+build.time=2010.07.06 14\:03\:36 EDT
+build.number=959
 build.user=J
-pwm.version=1.4.4 beta
+pwm.version=1.5.0
 build.java.vendor=Sun Microsystems Inc.
 build.java.version=1.6.0_19
