--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -28,6 +28,7 @@ Field_ConfirmPassword=Confirm Password
 Field_Confirm_Prefix=Confirm
 Field_User_Supplied_Question=Question
 Field_Option_Select=Select a question
+Field_CurrentPassword=Current Password
 
 Button_Login=Login
 Button_Reset=Clear
