--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -78,6 +78,12 @@ DESCR_expireCheckDuringAuth=When the user is authenticated to PWM, should there 
  password is expired (or about to expire based on the expirePreTime).  If this is set to \
  true, and the user's password is expired, they will be forced to the expire password page. \
 
+LABEL_password.change.requireCurrent=Require Current Password during change
+DEFLT_password.change.requireCurrent=false
+DESCR_password.change.requireCurrent=If true, the user's current password will be required on the change password page for most change \
+  password scenarios.  In most cases this is not requried because the user just authenticated to pwm prior to the seeing the change password \
+  page.
+
 LABEL_passwordSyncMinWaitTime=Password Change Minimum Wait Time
 DEFLT_passwordSyncMinWaitTime=5
 DESCR_passwordSyncMinWaitTime=During a password change, PWM will wait for at least this amount of time before forwarding \
