--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -73,7 +73,7 @@ Error_NewUserValidationFailed=One or more values are not correct
 Error_CantMatchUser=Username not found
 Error_ServiceNotAvailable=Service is not enabled
 Error_UserMisMatch=Authentication error, please close your browser
-Error_ActivateUserNoQueryMatch=Your user account is not eligable for activation
+Error_ActivateUserNoQueryMatch=Your user account is not eligible for activation
 Error_AuthenticationRequired=Authentication required
 Error_NoChallenges=No challenges have been configured
 Error_UserIntruder=Maximum login attempts for your userID have been exceeded.  Try again later.
@@ -91,6 +91,7 @@ Error_InvalidFormID=Your browser session is invalid or has expired.  Please clos
 Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
 Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
 Error_TokenIncorrect=Incorrect code, please try again.
+Error_BadCurrentPassword=Current password is incorrect, please try again.
 
 Error_FieldRequired=%field% is required
 Error_FieldNotANumber=%field% must be a number
