--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -103,6 +103,7 @@ Error_FieldBadConfirm=%field% fields do not match
 
 Error_ConfigUploadSuccess=File uploaded successfully
 Error_ConfigUploadFailure=File failed to upload: %field%
-Error_ConfigFormatError=Configuration format error: %field% 
+Error_ConfigSaveSuccess=Configuration saved successfully.  PWM restart has been requested.  PWM may be unavailable while restarting.  If the restart request fails you may need to restart PWM manually.
+Error_ConfigFormatError=Configuration format error: %field%
 Error_ConfigLdapFailure=Unable to connect to LDAP directory server: %field%
 Error_ConfigLdapSuccess=Successfully connected to LDAP directory server
