--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -123,3 +123,5 @@ Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be
 Display_PasswordStrengthLow=Strength: <b>Weak</b>
 Display_PasswordStrengthMedium=Strength: <b>Good</b>
 Display_PasswordStrengthHigh=Strength: <b>Strong</b>
+Display_IdleWarningTitle=Idle Timeout
+Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
