--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -606,17 +606,21 @@ DESCR_intruder.session.maxAttempts=The maximum number of attempts any user may m
  Once this limit is exceeded, it will never reset.  Opening a new browser or waiting for \
  the session idle timeout will get the new user a new session, however.\
 
+
 #*******************************************************************************************#
 #                                  Event Logging                                            #
 #*******************************************************************************************#
-CATEGORY_LABEL_LOGGING=Event Logging
+CATEGORY_LABEL_LOGGING=Logging & Alerts
 CATEGORY_DESCR_LOGGING=PWM will log events to three different places:\
   <ul>\
   <li><b>pwmDB</b> - PWM's local embedded database</li>\
   <li><b>ldap</b> - User events get saved to an attribute on the user entry</li>\
   <li><b>java</b> - PWM utilizes the standard Apache <a href="http://logging.apache.org/log4j/">log4j</a> library</li>\
   </ul>\
-  Additionally, PWM's use of the log4j allows directing log events to file, database, syslog, Windows event log and other systems.
+  Additionally, PWM's use of the log4j allows directing log events to file, database, syslog, Windows event log and other systems. \
+  <br/><br/>\
+  If enabled, alerts are sent to the Admin Alert To Address configured in the Email Settings.\
+  <br/><br/>\
 
 LABEL_events.java.stdoutLevel=Java StdOut Log Level
 DEFLT_events.java.stdoutLevel=INFO
@@ -658,7 +662,6 @@ DESCR_events.pwmDB.logLevel=Level at which to log events in the pwmDB.\
   <br/><br>Must be one of the following: <b>TRACE</b>, <b>DEBUG</b>, <b>INFO</b>, <b>WARN</b>, <b>ERROR</b> or <b>FATAL</b>.
 REGEX_events.pwmDB.logLevel=^(TRACE|DEBUG|INFO|WARN|ERROR|FATAL)$
 
-
 LABEL_events.ldap.attribute=User History Attribute
 DEFLT_events.ldap.attribute=pwmEventLog
 DESCR_events.ldap.attribute=Attribute used to write a user event attribute in ldap.  The user event log attribute will \
@@ -669,6 +672,30 @@ REGEX_events.ldap.attribute=^[a-zA-Z][a-zA-Z0-9]+$
 LABEL_events.ldap.maxEvents=User History Maximum Events
 DEFLT_events.ldap.maxEvents=20
 DESCR_events.ldap.maxEvents=Maximum number of events to hold in the event history attribute for a user.
+
+LABEL_events.alert.startup.enable=Startup Admin Alerts
+DEFLT_events.alert.startup.enable=true
+DESCR_events.alert.startup.enable=If true, send an alert to the PWM Administrator when PWM is started.
+
+LABEL_events.alert.shutdown.enable=Shutdown Admin Alerts
+DEFLT_events.alert.shutdown.enable=true
+DESCR_events.alert.shutdown.enable=If true, send an alert to the PWM Administrator when PWM is shutdown.
+
+LABEL_events.alert.intruder.enable=Intruder Admin Alerts
+DEFLT_events.alert.intruder.enable=true
+DESCR_events.alert.intruder.enable=If true, send an alert to the PWM Administrator when an intruder is detected.
+
+LABEL_events.alert.fatalEvent.enable=Fatal Event Admin Alerts
+DEFLT_events.alert.fatalEvent.enable=true
+DESCR_events.alert.fatalEvent.enable=If true, send an alert to the PWM Administrator when a fatal event occurs.
+
+LABEL_events.alert.configModify.enable=Configuration Modifification Admin Alerts
+DEFLT_events.alert.configModify.enable=true
+DESCR_events.alert.configModify.enable=If true, send an email when the configuration has been modified.
+
+LABEL_events.alert.dailyStats.enable=Daily Statistics Admin Alerts
+DEFLT_events.alert.dailyStats.enable=true
+DESCR_events.alert.dailyStats.enable=If true, send an email once a day (at 0:00 GMT to the PWM Administrator with statistics for the day.
 
 
 #*******************************************************************************************#
@@ -741,8 +768,10 @@ DESCR_challenge.applyWorldlist=Prevent commonly used words from being used as re
 
 LABEL_challenge.requiredChallenges=Required Questions
 DEFLT_challenge.requiredChallenges=%user%::5::200;;;What is your favorite cartoon?::5::200;;;What is your favorite food?::5::200
-DESCR_challenge.requiredChallenges=Required Questions\
-  <br/><br/>\
+DESCR_challenge.requiredChallenges=Required Questions for Challenge/Response.  The user must supply answers for all of these questions when \
+ setting up their responses.  Additionally, answers to these questions must be suppled during forgotten password.  Use <i>%user%</i> as the question \
+ text to indicate a user-supplied question.\
+ <br/><br/>\
  Format: <b>question::minimumLength::maximumLength</b>\
  <table style="width: 400px">\
  <tr><td>question</td><td>The text of the challenge question</td></tr>\
@@ -753,7 +782,10 @@ REGEX_challenge.requiredChallenges=^.+::[0-9]+::[0-9]+$
 
 LABEL_challenge.randomChallenges=Random Questions
 DEFLT_challenge.randomChallenges=What is your maiden name?::5::200;;;What is your fathers middle name?::5::200
-DESCR_challenge.randomChallenges=Random Questions\
+DESCR_challenge.randomChallenges=Random Questions for Challenge/Response.   Some of these questions will be presented to the user during \
+ forgotten password - the number set in the "Minimum Password Required" setting.  The user may be required to supply answers to all or some of \
+ these questions when setting up their responses.  This is controlled by the "Force All Random Response Completion" setting.  Use <i>%user%</i> as the question \
+ text to indicate a user-supplied question.\
   <br/><br/>\
  Format: <b>question::minimumLength::maximumLength</b>\
  <table style="width: 400px">\
@@ -1079,6 +1111,13 @@ LABEL_allowUrlSessions=Allow URL Sessions
 DEFLT_allowUrlSessions=false
 DESCR_allowUrlSessions=If true, allow sessions to be managed via parameter on URL when cookies are not enabled.  This \
  allows browsers (such as some mobile devices) that do not support cookies. 
+
+LABEL_enableSessionVerification=Enable Session Verification
+DEFLT_enableSessionVerification=true
+DESCR_enableSessionVerification=If true, sessions will be verified using a session verification key and a redirect.  This \
+  verification proves that the browser can correctly establish a session with the pwm server.  Verification proves the browser \
+  either supports cookies or URL sessions (if enabled) and the communication channel between browser and pwm is 'sticky' when \
+  their are multiple pwm servers.  Additionally it helps prevent some types of XSS attacks.
 
 LABEL_forceBasicAuth=Force Basic Authentication
 DEFLT_forceBasicAuth=false
