--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -92,6 +92,7 @@ Error_MissingNamingAttr=The naming attribute is missing, please contact your adm
 Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator. 
 Error_TokenIncorrect=Incorrect code, please try again.
 Error_BadCurrentPassword=Current password is incorrect, please try again.
+Error_Closing=The operation can not complete because PWM is shutting down.
 
 Error_FieldRequired=%field% is required
 Error_FieldNotANumber=%field% must be a number
