--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -52,6 +52,8 @@ Button_ChangeResponses=Go Back
 Button_CheckCode=CheckCode
 Button_Logout=Logout
 Button_Agree=I Agree
+Button_Cancel=Cancel
+Button_More=More
 
 Title_Login=Please Log In
 Title_ChangePassword=Change Password
@@ -76,6 +78,7 @@ Title_PasswordWarning=Password Warning
 Title_Captcha=Verification
 Title_ConfirmResponses=Confirm Password Responses
 Title_UserInformation=User Information
+Title_RandomPasswords=Random Passwords
 
 Display_Login=
 Display_PasswordExpired=Your password has expired.  You must set a new password now.
@@ -83,7 +86,6 @@ Display_ChangePassword=Please change your password. Keep your new password secur
 Display_CheckingPassword=Checking Password....
 Display_CheckingResponses=Checking Answers....
 Display_PleaseWait=Please Wait...
-Display_PasswordChangedTo=The password is being changed to:
 Display_SetupResponses=<p>In the event that you forget your password, you can recover your password by answering questions known only to you.</p><p>Please choose your questions and answers that can be used to verify your identity in case you forget your password.  Because the answers to these questions can be used to access your account, be sure to supply answers that are not easy for others to guess or discover.</p>
 Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In the event you forget your password, you will need to type in the exact answers to the questions below.
 Display_SetupRequiredResponses=Your administrator requires that you supply responses to these questions.  If you should forget your password, you will need to supply answers to all of these questions to reset your password.
@@ -125,3 +127,5 @@ Display_PasswordStrengthMedium=Strength: <b>Good</b>
 Display_PasswordStrengthHigh=Strength: <b>Strong</b>
 Display_IdleWarningTitle=Idle Timeout
 Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
+Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
+  words to make them easier to remember, but have been modified to make them difficult to guess.
