--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -626,6 +626,7 @@ LABEL_events.java.stdoutLevel=Java StdOut Log Level
 DEFLT_events.java.stdoutLevel=INFO
 DESCR_events.java.stdoutLevel=Default Log level for stdout.  Most servlet containers will redirect stdout to \
   a log file.  For example, tomcat logs stdout output to the <i>tomcat/logs/catalina.out</i> file by default.\
+  \ If blank, PWM will not send events to stdout.
  <br/><br>Must be one of the following: <b>TRACE</b>, <b>DEBUG</b>, <b>INFO</b>, <b>WARN</b>, <b>ERROR</b> or <b>FATAL</b>.
 REGEX_events.java.stdoutLevel=^(TRACE|DEBUG|INFO|WARN|ERROR|FATAL)$
 
