--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -194,19 +194,18 @@ LABEL_ldap.selectableContexts=Login Contexts
 DEFLT_ldap.selectableContexts=
 DESCR_ldap.selectableContexts=If configured, this setting will add another field to the form-based PWM \
  login screen.  The field will allow the user to select a specific context \
- used during login.  This allows PWM to be used against trees that do not \
- have unique usernames throughout.\
+ used during login.  This allows PWM to be used against ldap directories that do not \
+ have unique usernames throughout the entire directory. \
  <br/><br/>\
- Values can further be set with both a display value and a context, separated by three colons "::".\
+ Values can further be set with both a display value and a context, separated by three colons.\
  <br/><br/>\
  For example:\
- <br/><br/>\
-  <b>ou=sf,ou=ca,o=example::San Francisco</b>\
-  <br/>\
-  <b>ou=lon,ou=uk,o=example::London</b>\
- <br/><br/>\
- Any contexts here must be below the context specified in the LDAP Contextless Login Root setting.
-REGEX_ldap.selectableContexts=^.+::.+$
+ <p>\
+  <b>ou=sf,ou=ca,o=example:::San Francisco</b><br/\
+  <b>ou=lon,ou=uk,o=example:::London</b><br/\
+  <b>ou=nyc,ou=ny,o=example:::New York</b><br/\
+ </p>
+REGEX_ldap.selectableContexts=^.+:::.+$
 
 LABEL_pwmAdmin.queryMatch=PWM Admin Query String
 DEFLT_pwmAdmin.queryMatch=(groupMembership=cn=PwmAdmins,ou=Groups,o=example)
