--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -54,6 +54,7 @@ Password_HistoryFull=New password history is full
 Password_MeetsRules=New password accepted, please click change password
 Password_TooSoon=Not enough time has passed since last password change
 Password_UsingDisallowedValue=New password is using a value that is not allowed
+Password_TooWeak=Password is too weak.  Try adding more numbers, symbols or mixed case letters.
 
 Error_WrongAnswer=One or more responses are not correct.  Please try again.
 Error_WrongPassword=The username or password is not valid.  Please try again.
