--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,8 +1,8 @@
 #Build Number for ANT. Do not edit!
-#Mon Aug 16 20:27:52 EDT 2010
-build.time=2010.08.16 20\:27\:52 EDT
-build.number=975
+#Tue Aug 17 15:02:05 EDT 2010
+build.time=2010.08.17 15\:02\:05 EDT
+build.number=977
 build.user=J
-pwm.version=1.5.1
+pwm.version=1.5.2 devbuild
 build.java.vendor=Sun Microsystems Inc.
 build.java.version=1.6.0_19
